--- a/SIC/Project2/Project2.vcxproj
+++ b/SIC/Project2/Project2.vcxproj
@@ -119,7 +119,10 @@
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="HexDec.cpp" />
+    <ClCompile Include="main.cpp" />
     <ClCompile Include="Object.cpp" />
+    <ClCompile Include="pass1.cpp" />
+    <ClCompile Include="pass2.cpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
