--- a/Project1/Project1/Project1.vcxproj
+++ b/Project1/Project1/Project1.vcxproj
@@ -22,7 +22,7 @@
     <VCProjectVersion>15.0</VCProjectVersion>
     <ProjectGuid>{B0A36391-F317-4685-8D02-74008A03E158}</ProjectGuid>
     <RootNamespace>Project1</RootNamespace>
-    <WindowsTargetPlatformVersion>10.0.15063.0</WindowsTargetPlatformVersion>
+    <WindowsTargetPlatformVersion>10.0.16299.0</WindowsTargetPlatformVersion>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'" Label="Configuration">
@@ -117,6 +117,7 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClCompile Include="HEXA_DEC.cpp" />
+    <ClCompile Include="main.cpp" />
     <ClCompile Include="Pass1.cpp" />
     <ClCompile Include="Pass2.cpp" />
     <ClCompile Include="TABLES.cpp" />
@@ -124,6 +125,7 @@
   <ItemGroup>
     <ClInclude Include="HEXA_DEC.h" />
     <ClInclude Include="pass1.h" />
+    <ClInclude Include="pass2.h" />
     <ClInclude Include="TABLES.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
